--- a/package.json
+++ b/package.json
@@ -13,21 +13,24 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@google-cloud/storage": "^7.18.0",
-    "@prisma/client": "^5.10.2",
+    "@google-cloud/storage": "^7.12.0",
+    "@prisma/client": "5.10.2",
     "@react-google-maps/api": "^2.20.8",
+    "@types/papaparse": "^5.5.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dnd-kit": "^0.0.2",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
-    "next": "15.1.0",
+    "next": "^15.5.11",
+    "papaparse": "^5.5.3",
     "pdfjs-dist": "^4.4.168",
-    "prisma": "^5.10.2",
+    "prisma": "5.10.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-easy-crop": "^5.5.6",
     "react-pdf": "^9.1.1",
+    "react-to-print": "^3.2.0",
     "recharts": "^3.7.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
