--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dnd-kit": "^0.0.2",
-    "framer-motion": "^12.29.2",
+    "framer-motion": "11.11.11",
     "lucide-react": "^0.563.0",
-    "next": "^15.5.11",
+    "next": "15.1.7",
     "papaparse": "^5.5.3",
     "pdfjs-dist": "^4.4.168",
     "prisma": "5.10.2",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-easy-crop": "^5.5.6",
     "react-pdf": "^9.1.1",
     "react-to-print": "^3.2.0",
