fix: comprehensive build fix (stable deps, postgres, types, npmrc)

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "next lint",
     "postinstall": "prisma generate"
   },
   "dependencies": {
@@ -14,39 +14,39 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@google-cloud/storage": "^7.12.0",
-    "@prisma/client": "5.10.2",
+    "@prisma/client": "5.22.0",
     "@react-google-maps/api": "^2.20.8",
     "@types/papaparse": "^5.5.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dnd-kit": "^0.0.2",
     "framer-motion": "11.11.11",
-    "lucide-react": "^0.563.0",
+    "lucide-react": "0.468.0",
     "next": "15.1.7",
     "papaparse": "^5.5.3",
     "pdfjs-dist": "^4.4.168",
-    "prisma": "5.10.2",
+    "prisma": "5.22.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-easy-crop": "^5.5.6",
     "react-pdf": "^9.1.1",
     "react-to-print": "^3.2.0",
-    "recharts": "^3.7.0",
+    "recharts": "^2.15.0",
     "server-only": "^0.0.1",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0",
+    "sonner": "^1.7.0",
+    "tailwind-merge": "^2.5.0",
     "use-places-autocomplete": "^4.0.1",
     "web-push": "^3.6.7",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@tailwindcss/postcss": "4.0.0",
+    "@types/node": "^20.0.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "eslint": "^9.0.0",
     "eslint-config-next": "15.1.7",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "tailwindcss": "4.0.0",
+    "typescript": "^5.0.0"
   }
 }
