--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "dnd-kit": "^0.0.2",
     "framer-motion": "^6.5.1",
+    "jose": "^6.1.3",
     "lucide-react": "0.468.0",
     "next": "15.5.11",
     "papaparse": "^5.5.3",
