--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "date-fns": "^4.1.0",
     "dnd-kit": "^0.0.2",
     "framer-motion": "^6.5.1",
+    "googleapis": "^171.4.0",
     "jose": "^6.1.3",
     "lucide-react": "0.468.0",
-    "next": "15.5.11",
+    "next": "15.5.7",
     "papaparse": "^5.5.3",
     "pdfjs-dist": "^4.4.168",
     "prisma": "5.22.0",
@@ -32,7 +33,7 @@
     "react-easy-crop": "^5.5.6",
     "react-pdf": "^9.1.1",
     "react-to-print": "^3.2.0",
-    "recharts": "^2.15.0",
+    "recharts": "^2.15.4",
     "server-only": "^0.0.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.0",
