--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-config-next": "15.5.11",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.19.2",
     "typescript": "^5.0.0"
   },
   "prisma": {
