--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@google-cloud/storage": "^7.12.0",
     "@prisma/client": "5.22.0",
+    "@radix-ui/react-popover": "^1.1.15",
     "@react-google-maps/api": "^2.20.8",
     "@tiptap/extension-color": "^3.19.0",
     "@tiptap/extension-highlight": "^3.19.0",
@@ -44,6 +45,7 @@
     "pdfjs-dist": "^4.4.168",
     "prisma": "5.22.0",
     "react": "19.0.0",
+    "react-day-picker": "^9.13.2",
     "react-dom": "19.0.0",
     "react-easy-crop": "^5.5.6",
     "react-konva": "^19.2.2",
